# apis/scanner/v1alpha1/types.go
@@ -2,6 +2,7 @@ package v1alpha1
 
 import (
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	core "k8s.io/api/core/v1"
 )
 
 // Vulnerability represents vulnerability entity returned by Clair
@@ -31,6 +32,24 @@ type ScanResult struct {
 	Features []Feature `json:"features,omitempty"`
 }
 
+type ImageReviewRequest struct {
+	// Docker image name.
+	// More info: https://kubernetes.io/docs/concepts/containers/images
+	// This field is optional to allow higher level config management to default or override
+	// container images in workload controllers like Deployments and StatefulSets.
+	// +optional
+	Image string `json:"image,omitempty" protobuf:"bytes,2,opt,name=image"`
+
+	// ImagePullSecrets is an optional list of references to secrets in the same namespace to use for pulling any of the images used by this PodSpec.
+	// If specified, these secrets will be passed to individual puller implementations for them to use. For example,
+	// in the case of docker, only DockerConfig type secrets are honored.
+	// More info: https://kubernetes.io/docs/concepts/containers/images#specifying-imagepullsecrets-on-a-pod
+	// +optional
+	// +patchMergeKey=name
+	// +patchStrategy=merge
+	ImagePullSecrets []core.LocalObjectReference `json:"imagePullSecrets,omitempty" patchStrategy:"merge" patchMergeKey:"name"`
+}
+
 type ImageReviewResponse struct {
 	Images []ScanResult `json:"images,omitempty"`
 }
@@ -50,6 +69,9 @@ const (
 type ImageReview struct {
 	metav1.TypeMeta   `json:",inline"`
 	metav1.ObjectMeta `json:"metadata,omitempty"`
+
+	// +optional
+	Request *ImageReviewRequest `json:"request,omitempty"`
 	// +optional
 	Response *ImageReviewResponse `json:"response,omitempty"`
 }
