# openapi-spec/v2/swagger.json
@@ -271,6 +271,9 @@
         "metadata": {
           "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ObjectMeta"
         },
+        "request": {
+          "$ref": "#/definitions/com.github.soter.scanner.apis.scanner.v1alpha1.ImageReviewRequest"
+        },
         "response": {
           "$ref": "#/definitions/com.github.soter.scanner.apis.scanner.v1alpha1.ImageReviewResponse"
         }
@@ -282,6 +285,23 @@
           "kind": "ImageReview"
         }
       ]
+    },
+    "com.github.soter.scanner.apis.scanner.v1alpha1.ImageReviewRequest": {
+      "properties": {
+        "image": {
+          "description": "Docker image name. More info: https://kubernetes.io/docs/concepts/containers/images This field is optional to allow higher level config management to default or override container images in workload controllers like Deployments and StatefulSets.",
+          "type": "string"
+        },
+        "imagePullSecrets": {
+          "description": "ImagePullSecrets is an optional list of references to secrets in the same namespace to use for pulling any of the images used by this PodSpec. If specified, these secrets will be passed to individual puller implementations for them to use. For example, in the case of docker, only DockerConfig type secrets are honored. More info: https://kubernetes.io/docs/concepts/containers/images#specifying-imagepullsecrets-on-a-pod",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/io.k8s.api.core.v1.LocalObjectReference"
+          },
+          "x-kubernetes-patch-merge-key": "name",
+          "x-kubernetes-patch-strategy": "merge"
+        }
+      }
     },
     "com.github.soter.scanner.apis.scanner.v1alpha1.ImageReviewResponse": {
       "properties": {
@@ -330,6 +350,15 @@
         },
         "featureName": {
           "description": "FixedIn     []Feature `json:\"FixedIn,omitempty\"`",
+          "type": "string"
+        }
+      }
+    },
+    "io.k8s.api.core.v1.LocalObjectReference": {
+      "description": "LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.",
+      "properties": {
+        "name": {
+          "description": "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names",
           "type": "string"
         }
       }
